<resources>
    <string name="app_name">Timetable for HSE FE</string>
    <string name="students_timetable">Timetable for students</string>
    <string name="teachers_timetable">Timetable for teachers</string>
    <string name="select_teacher">Select teacher:</string>
    <string name="time_s">Time:</string>
    <string name="subject_s">Subject:</string>
    <string name="room_s">Room:</string>
    <string name="building_s">Building:</string>
    <string name="teacher_s">Teacher:</string>
    <string name="daily_timetable">Daily timetable</string>
    <string name="weekly_timetable">Weekly timetable</string>
    <string name="status_ongoing_lesson">Ongoing lesson</string>
    <string name="status_no_lesson">No lesson</string>
    <string name="select_group">Select group:</string>
    <string name="settings">Settings</string>
    <string name="current_avatar">Current avatar:</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="current_light_level_d">Current light level: %f lux</string>
    <string name="save">Save</string>
    <string name="missing_intent_handler">Missing application capable of this.</string>
    <string name="missing_camera">This phone doesn\'t have a camera.</string>
    <string name="file_error">Couldn\'t save file.</string>
    <string name="loading">Loading…</string>
    <string name="nothing">Nothing</string>
    <string name="permission_request_title">Permission required</string>
    <string name="camera_permission_explanation">This app requires camera permission to:\n -Take photos for your profile picture.</string>
    <string name="camera_permission_missing">Can\'t do this without camera permission.</string>
    <string name="schedule_location">%s, %s</string>
    <string name="schedule_now">Today:</string>
</resources>