<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentsTimetableActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_students_timetable_Toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="?colorOnPrimary" />

    <TextView
        android:id="@+id/activity_students_timetable_groupselect_label"
        style="@style/Style.Timetable.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:labelFor="@id/activity_students_timetable_groupselect"
        android:text="@string/select_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_students_timetable_Toolbar" />

    <Spinner
        android:id="@+id/activity_students_timetable_groupselect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/activity_students_timetable_groupselect_label" />

    <TextView
        android:id="@+id/activity_students_timetable_timeLabel"
        style="@style/Style.Timetable.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/time_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_students_timetable_groupselect" />

    <TextView
        android:id="@+id/activity_students_timetable_time"
        style="@style/Style.Timetable.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/activity_students_timetable_timeLabel"
        app:layout_constraintTop_toTopOf="@id/activity_students_timetable_timeLabel" />

    <TextView
        android:id="@+id/activity_students_timetable_status"
        style="@style/Style.Timetable.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_students_timetable_timeLabel" />

    <TextView
        android:id="@+id/activity_students_timetable_subjectLabel"
        style="@style/Style.Timetable.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/subject_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_students_timetable_status" />

    <TextView
        android:id="@+id/activity_students_timetable_subject"
        style="@style/Style.Timetable.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/activity_students_timetable_subjectLabel"
        app:layout_constraintTop_toTopOf="@id/activity_students_timetable_subjectLabel" />

    <TextView
        android:id="@+id/activity_students_timetable_roomLabel"
        style="@style/Style.Timetable.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/room_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_students_timetable_subjectLabel" />

    <TextView
        android:id="@+id/activity_students_timetable_room"
        style="@style/Style.Timetable.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/activity_students_timetable_roomLabel"
        app:layout_constraintTop_toTopOf="@id/activity_students_timetable_roomLabel" />

    <TextView
        android:id="@+id/activity_students_timetable_buildingLabel"
        style="@style/Style.Timetable.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/building_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_students_timetable_roomLabel" />

    <TextView
        android:id="@+id/activity_students_timetable_building"
        style="@style/Style.Timetable.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/activity_students_timetable_buildingLabel"
        app:layout_constraintTop_toTopOf="@id/activity_students_timetable_buildingLabel" />

    <TextView
        android:id="@+id/activity_students_timetable_teacherLabel"
        style="@style/Style.Timetable.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/teacher_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_students_timetable_buildingLabel" />

    <TextView
        android:id="@+id/activity_students_timetable_teacher"
        style="@style/Style.Timetable.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/activity_students_timetable_teacherLabel"
        app:layout_constraintTop_toTopOf="@id/activity_students_timetable_teacherLabel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_students_timetable_teacherLabel">

        <Button
            android:id="@+id/activity_students_timetable_daily"
            style="?buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/daily_timetable" />

        <Button
            android:id="@+id/activity_students_timetable_weekly"
            style="?buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekly_timetable" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>