<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_settings_Toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="?colorOnPrimary" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_settings_Toolbar">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/activity_settings_AvatarLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/activity_settings_Avatar"
                    android:text="@string/current_avatar"
                    app:layout_constraintEnd_toEndOf="@id/activity_settings_Avatar"
                    app:layout_constraintStart_toStartOf="@id/activity_settings_Avatar"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/activity_settings_Avatar"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginStart="30dp"
                    android:adjustViewBounds="true"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    app:layout_constraintDimensionRatio="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_settings_AvatarLabel"
                    app:srcCompat="@drawable/default_avatar" />

                <Button
                    android:id="@+id/activity_settings_takePictureButton"
                    style="?buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/take_a_picture"
                    app:layout_constraintEnd_toEndOf="@id/activity_settings_Avatar"
                    app:layout_constraintStart_toStartOf="@id/activity_settings_Avatar"
                    app:layout_constraintTop_toBottomOf="@id/activity_settings_Avatar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/activity_settings_username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/enter_your_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/activity_settings_lightlevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/current_light_level_d" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/activity_settings_SaveButton"
            style="?buttonStyle"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="?colorPrimaryVariant"
            android:text="@string/save" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideInset" >

            <TextView
                android:id="@+id/activity_settings_sensorsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>